Day one take two

--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -3,3 +3,7 @@ $accent: hsl(215, 37%, 22%);
 $header: hsl(0, 0%, 24%);
 $text1: hsl(0, 2%, 45%);
 $text2: hsl(0, 0%, 100%);
+
+// Font Sizes
+$font-sm: 1rem; // 14px
+$font-med: 1.125rem; // 18px
