--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -13,9 +13,18 @@ html {
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
+    font-size: $font-med;
+    color: $text1;
     font-weight: 300;
     line-height: 1.3;
     overflow-x: hidden;
+  }
+
+  a,
+  a:visited,
+  a:hover {
+    text-decoration: none;
+    color: $text1;
   }
   
   // Flexbox
@@ -34,3 +43,34 @@ html {
     align-items: center;
   }
  }
+
+ // Buttons
+button,
+.button {
+  position: relative;
+  display: inline-block;
+  padding: 0.875rem 2.1875rem;
+  background-color: $brandcolor;
+  border: 0;
+  border-radius: 50px;
+  cursor: pointer;
+  font-weight: 400;
+  transition: opacity 300ms ease-in-out;
+  overflow: hidden;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.25);
+    opacity: 0;
+    transition: opacity 150ms ease-in-out;
+  }
+
+  &:hover::before {
+    opacity: 1;
+  }
+}
