--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -13,9 +13,18 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Lato", sans-serif;
+  font-size: 1.125rem;
+  color: hsl(0, 2%, 45%);
   font-weight: 300;
   line-height: 1.3;
   overflow-x: hidden;
+}
+
+a,
+a:visited,
+a:hover {
+  text-decoration: none;
+  color: hsl(0, 2%, 45%);
 }
 
 .flex {
@@ -31,6 +40,39 @@ body {
   align-items: center;
 }
 
+button,
+.button {
+  position: relative;
+  display: inline-block;
+  padding: 0.875rem 2.1875rem;
+  background-color: hsl(220, 85%, 29%);
+  border: 0;
+  border-radius: 50px;
+  cursor: pointer;
+  font-weight: 400;
+  transition: opacity 300ms ease-in-out;
+  overflow: hidden;
+}
+button::before,
+.button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.25);
+  opacity: 0;
+  transition: opacity 150ms ease-in-out;
+}
+button:hover::before,
+.button:hover::before {
+  opacity: 1;
+}
+
+.header {
+  font-size: 1rem;
+}
 .header nav {
   padding: 24px;
 }
@@ -42,4 +84,7 @@ body {
 }
 .header__menu > span:not(:last-child) {
   margin-bottom: 3px;
+}
+.header__cta {
+  color: hsl(0, 0%, 100%);
 }/*# sourceMappingURL=style.css.map */
