--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -24,7 +24,6 @@ html {
   a:visited,
   a:hover {
     text-decoration: none;
-    color: $text1;
   }
   
   // Flexbox
@@ -49,12 +48,13 @@ button,
 .button {
   position: relative;
   display: inline-block;
-  padding: 0.875rem 2.1875rem;
+  padding: 1.25rem 2.875rem;
+  margin-left: 2.75rem;
   background-color: $brandcolor;
   border: 0;
-  border-radius: 50px;
+  border-radius: 5px;
   cursor: pointer;
-  font-weight: 400;
+  font-weight: 700;
   transition: opacity 300ms ease-in-out;
   overflow: hidden;
 
@@ -73,4 +73,21 @@ button,
   &:hover::before {
     opacity: 1;
   }
+}
+
+// Visibility
+.hide-for-mobile {
+  @include breakpoint-down(medium) {
+    display: none;
+  }
+  display: flex;
+  
+}
+
+.hide-for-desktop {
+  @include breakpoint-up(large) {
+    display: none;
+  }
+
+
 }
