--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -24,7 +24,6 @@ a,
 a:visited,
 a:hover {
   text-decoration: none;
-  color: hsl(0, 2%, 45%);
 }
 
 .flex {
@@ -44,12 +43,13 @@ button,
 .button {
   position: relative;
   display: inline-block;
-  padding: 0.875rem 2.1875rem;
+  padding: 1.25rem 2.875rem;
+  margin-left: 2.75rem;
   background-color: hsl(220, 85%, 29%);
   border: 0;
-  border-radius: 50px;
+  border-radius: 5px;
   cursor: pointer;
-  font-weight: 400;
+  font-weight: 700;
   transition: opacity 300ms ease-in-out;
   overflow: hidden;
 }
@@ -70,11 +70,31 @@ button:hover::before,
   opacity: 1;
 }
 
+.hide-for-mobile {
+  display: flex;
+}
+@media (max-width: 63.9375em) {
+  .hide-for-mobile {
+    display: none;
+  }
+}
+
+@media (min-width: 64em) {
+  .hide-for-desktop {
+    display: none;
+  }
+}
+
 .header {
   font-size: 1rem;
 }
 .header nav {
+  margin-top: 11px;
   padding: 24px;
+}
+.header__logo img {
+  width: 6.375rem;
+  height: 1.5rem;
 }
 .header__menu > span {
   display: block;
@@ -84,6 +104,32 @@ button:hover::before,
 }
 .header__menu > span:not(:last-child) {
   margin-bottom: 3px;
+}
+.header__links {
+  position: relative;
+  color: hsl(0, 2%, 45%);
+  transition: color 300ms ease-in-out;
+}
+.header__links:not(:last-child) {
+  margin-right: 80px;
+}
+.header__links::before {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 2px;
+  left: 0;
+  right: 0;
+  bottom: -10px;
+  background: hsl(220, 85%, 29%);
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
+}
+.header__links:hover {
+  color: hsl(220, 85%, 29%);
+}
+.header__links:hover::before {
+  opacity: 1;
 }
 .header__cta {
   color: hsl(0, 0%, 100%);
