--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,8 +1,37 @@
 .header {
+    // Hamburger overlay
+    &.open {
+
+        .overlay{
+            animation: fade-in 300ms ease-in-out forwards;
+        }
+        .header__menu {
+            > span:first-child {
+                transform: rotate(45deg);
+              }
+              
+              > span:nth-child(2) {
+                opacity: 0;
+              }
+              
+              > span:last-child {
+                transform: rotate(-45deg);
+              }
+        }
+    }
+
+    .overlay {
+        position: fixed;
+        top: 3.75rem;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+        background-image: linear-gradient($brandcolor, transparent);
+    }
 
     nav{
-        margin-top: 11px;
         padding: 24px;
+        background: white;
     }
    
     &__logo{
@@ -16,9 +45,11 @@
        // Mobile
        > span {
            display: block;
-           width: 26px;
+           width: 20px;
            height: 2px;
            background-color: $brandcolor;
+           transition: all 300ms ease-in-out;
+           transform-origin: 3px 1px;
 
            &:not(:last-child){
                margin-bottom: 3px;
