--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -1,3 +1,17 @@
+@keyframes fade-in {
+  from {
+    display: none;
+    opacity: 0;
+  }
+  1% {
+    display: block;
+    opacity: 0;
+  }
+  to {
+    display: block;
+    opacity: 1;
+  }
+}
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -79,6 +93,18 @@ button:hover::before,
   }
 }
 
+@media (max-width: 63.9375em) {
+  .header nav {
+    margin-top: 0px;
+  }
+}
+
+@media (min-width: 64em) {
+  .header nav {
+    margin-top: 11px;
+  }
+}
+
 @media (min-width: 64em) {
   .hide-for-desktop {
     display: none;
@@ -88,9 +114,29 @@ button:hover::before,
 .header {
   font-size: 1rem;
 }
+.header.open .overlay {
+  animation: fade-in 300ms ease-in-out forwards;
+}
+.header.open .header__menu > span:first-child {
+  transform: rotate(45deg);
+}
+.header.open .header__menu > span:nth-child(2) {
+  opacity: 0;
+}
+.header.open .header__menu > span:last-child {
+  transform: rotate(-45deg);
+}
+.header .overlay {
+  position: fixed;
+  top: 3.75rem;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  background-image: linear-gradient(hsl(220, 85%, 29%), transparent);
+}
 .header nav {
-  margin-top: 11px;
   padding: 24px;
+  background: white;
 }
 .header__logo img {
   width: 6.375rem;
@@ -98,9 +144,11 @@ button:hover::before,
 }
 .header__menu > span {
   display: block;
-  width: 26px;
+  width: 20px;
   height: 2px;
   background-color: hsl(220, 85%, 29%);
+  transition: all 300ms ease-in-out;
+  transform-origin: 3px 1px;
 }
 .header__menu > span:not(:last-child) {
   margin-bottom: 3px;
