--- a/app/scss/_animations.scss
+++ b/app/scss/_animations.scss
@@ -1,16 +1,39 @@
-@keyframes fade-in{
+.has-fade {
+    visibility: hidden;
+  }
+  
+  @keyframes fade-in {
     from {
-        display: none;
-        opacity: 0;
+      visibility: hidden;
+      opacity: 0;
     }
-
     1% {
-        display: block;
-        opacity: 0;
+      visibility: visible;
+      opacity: 0;
     }
-    
     to {
-        display: block;
-        opacity: 1;
+      visibility: visible;
+      opacity: 1;
     }
-}
+  }
+  .fade-in {
+    animation: fade-in 350ms ease-in-out forwards;
+  }
+  
+  @keyframes fade-out {
+    from {
+      visibility: visible;
+      opacity: 1;
+    }
+    99% {
+      visibility: visible;
+      opacity: 0;
+    }
+    to {
+      visibility: hidden;
+      opacity: 0;
+    }
+  }
+  .fade-out {
+    animation: fade-out 350ms ease-in-out forwards;
+  }
