--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -9,6 +9,12 @@ html {
     box-sizing: inherit;
   }
   
+  //Spacing
+  .container {
+    padding-left: 6.2813rem;
+    padding-right: 6.2813rem;
+  }
+
   body {
     margin: 0;
     padding: 0;
@@ -18,6 +24,10 @@ html {
     font-weight: 300;
     line-height: 1.3;
     overflow-x: hidden;
+
+    &.noscroll {
+      overflow: hidden;
+    }
   }
 
   a,
@@ -83,14 +93,24 @@ button,
   display: flex;
 }
 
-.header nav {
+.container {
   @include breakpoint-down(medium) {
-    margin-top: 0px;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 }
+
+.header nav {
+  @include breakpoint-down(medium) {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+}
+
 .header nav {
   @include breakpoint-up(large) {
-    margin-top: 11px;
+    padding-top: 2.1875rem;
   }
 }
 
@@ -98,6 +118,5 @@ button,
   @include breakpoint-up(large) {
     display: none;
   }
-
 
 }
