--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -21,16 +21,24 @@
     }
 
     .overlay {
+        opacity: 0;
         position: fixed;
         top: 3.75rem;
         right: 0px;
         bottom: 0px;
         left: 0px;
         background-image: linear-gradient($brandcolor, transparent);
+
+        &.fade-in {
+            display: block;
+        }
+
+        &.fade-out {
+            
+        }
     }
 
     nav{
-        padding: 24px;
         background: white;
     }
    
@@ -40,7 +48,25 @@
             height: 1.5rem;
         }
     }
-   
+
+    &__content {
+        position: absolute;
+        width: calc(100% - 3rem);
+        left: 50%;
+        transform: translateX(-50%);
+        background: $text2;
+        margin-top: 1.5rem;
+        padding: 1.625rem;
+        border-radius: 5px;
+
+        a {
+            display: block;
+            padding: 0.625rem;
+            color: $text1;
+            text-align: center;
+        }
+    }
+
     &__menu {
        // Mobile
        > span {
