--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -1,17 +1,43 @@
+.has-fade {
+  visibility: hidden;
+}
+
 @keyframes fade-in {
   from {
-    display: none;
+    visibility: hidden;
     opacity: 0;
   }
   1% {
-    display: block;
+    visibility: visible;
     opacity: 0;
   }
   to {
-    display: block;
+    visibility: visible;
     opacity: 1;
   }
 }
+.fade-in {
+  animation: fade-in 350ms ease-in-out forwards;
+}
+
+@keyframes fade-out {
+  from {
+    visibility: visible;
+    opacity: 1;
+  }
+  99% {
+    visibility: visible;
+    opacity: 0;
+  }
+  to {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+.fade-out {
+  animation: fade-out 350ms ease-in-out forwards;
+}
+
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -23,6 +49,11 @@ html {
   box-sizing: inherit;
 }
 
+.container {
+  padding-left: 6.2813rem;
+  padding-right: 6.2813rem;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -32,6 +63,9 @@ body {
   font-weight: 300;
   line-height: 1.3;
   overflow-x: hidden;
+}
+body.noscroll {
+  overflow: hidden;
 }
 
 a,
@@ -94,14 +128,22 @@ button:hover::before,
 }
 
 @media (max-width: 63.9375em) {
+  .container {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
+@media (max-width: 63.9375em) {
   .header nav {
-    margin-top: 0px;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
   }
 }
 
 @media (min-width: 64em) {
   .header nav {
-    margin-top: 11px;
+    padding-top: 2.1875rem;
   }
 }
 
@@ -127,6 +169,7 @@ button:hover::before,
   transform: rotate(-45deg);
 }
 .header .overlay {
+  opacity: 0;
   position: fixed;
   top: 3.75rem;
   right: 0px;
@@ -134,13 +177,31 @@ button:hover::before,
   left: 0px;
   background-image: linear-gradient(hsl(220, 85%, 29%), transparent);
 }
+.header .overlay.fade-in {
+  display: block;
+}
 .header nav {
-  padding: 24px;
   background: white;
 }
 .header__logo img {
   width: 6.375rem;
   height: 1.5rem;
+}
+.header__content {
+  position: absolute;
+  width: calc(100% - 3rem);
+  left: 50%;
+  transform: translateX(-50%);
+  background: hsl(0, 0%, 100%);
+  margin-top: 1.5rem;
+  padding: 1.625rem;
+  border-radius: 5px;
+}
+.header__content a {
+  display: block;
+  padding: 0.625rem;
+  color: hsl(0, 2%, 45%);
+  text-align: center;
 }
 .header__menu > span {
   display: block;
