--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -54,7 +54,6 @@ html {
  }
 
  // Buttons
-button,
 .button {
   position: relative;
   display: inline-block;
@@ -108,6 +107,13 @@ button,
 
 }
 
+.button {
+  @include breakpoint-down(medium) {
+    margin-left: 0px;
+  }
+
+}
+
 .header nav {
   @include breakpoint-up(large) {
     padding-top: 2.1875rem;
@@ -119,4 +125,9 @@ button,
     display: none;
   }
 
+}
+
+//Hero
+.colorh{
+  color: $hero-text;
 }
