--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -1,6 +1,7 @@
 $brandcolor: hsl(220, 85%, 29%);
-$accent: hsl(215, 37%, 22%);
-$header: hsl(0, 0%, 24%);
+$accent: hsl(214, 37%, 22%);
+$bgcolor: hsl(216, 29%, 93%);
+$hero-text: hsl(0, 0%, 24%);
 $text1: hsl(0, 2%, 45%);
 $text2: hsl(0, 0%, 100%);
 
