--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,4 +1,6 @@
 .header {
+
+    background: $bgcolor;
     // Hamburger overlay
     &.open {
 
@@ -39,7 +41,7 @@
     }
 
     nav{
-        background: white;
+        
     }
    
     &__logo{
