--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -50,8 +50,52 @@ html {
 }
 
 .container {
-  padding-left: 6.2813rem;
-  padding-right: 6.2813rem;
+  max-width: 77.5rem;
+  margin: 0 auto;
+}
+.container--pall {
+  padding-top: 4.375rem;
+  padding-right: 1.5rem;
+  padding-bottom: 4.375rem;
+  padding-left: 1.5rem;
+}
+@media (min-width: 64em) {
+  .container--pall {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+}
+@media (min-width: 64em) {
+  .container--plr {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+}
+.container--px {
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
+}
+.container--pt {
+  padding-top: 4.375rem;
+}
+@media (min-width: 64em) {
+  .container--pt {
+    padding-top: 6rem;
+  }
+}
+.container--pr {
+  padding-right: 1.5rem;
+}
+.container--pb {
+  padding-bottom: 4.375rem;
+}
+@media (min-width: 64em) {
+  .container--pb {
+    padding-bottom: 6rem;
+  }
+}
+.container--pl {
+  padding-left: 1.5rem;
 }
 
 body {
@@ -126,8 +170,10 @@ a:hover {
 
 @media (max-width: 63.9375em) {
   .container {
-    padding-left: 1.5rem;
+    padding-top: 4.375rem;
     padding-right: 1.5rem;
+    padding-bottom: 4.375rem;
+    padding-left: 1.5rem;
   }
 }
 
@@ -161,6 +207,7 @@ a:hover {
 }
 
 .header {
+  background: hsl(216, 29%, 93%);
   font-size: 1rem;
 }
 .header.open .overlay {
@@ -186,9 +233,6 @@ a:hover {
 }
 .header .overlay.fade-in {
   display: block;
-}
-.header nav {
-  background: white;
 }
 .header__logo img {
   width: 6.375rem;
@@ -251,6 +295,12 @@ a:hover {
   color: hsl(0, 0%, 100%);
 }
 
+@media (min-width: 64em) {
+  .hero {
+    display: flex;
+    align-items: center;
+  }
+}
 .hero__background {
   background-color: hsl(216, 29%, 93%);
 }
@@ -260,4 +310,32 @@ a:hover {
   background-repeat: no-repeat;
   background-position: center center;
   min-height: 21.5rem;
+}
+@media (min-width: 64em) {
+  .hero__image {
+    flex: 3;
+    order: 2;
+    height: 41.3125rem;
+    min-width: 42.375rem;
+  }
+}
+.hero__text {
+  text-align: center;
+}
+@media (min-width: 64em) {
+  .hero__text {
+    flex: 2;
+    order: 1;
+    text-align: left;
+  }
+}
+.hero h1 {
+  font-size: 2.8125rem;
+  margin-top: 0px;
+  margin-bottom: 1.5rem;
+  width: 21ch;
+}
+.hero .ctabtn {
+  font-weight: 700;
+  gap: 1.9375rem;
 }/*# sourceMappingURL=style.css.map */
