--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -137,10 +137,20 @@ html {
 
 .container {
   @include breakpoint-down(medium) {
-    padding-top: 4.375rem;
+    padding-top: 0.375rem;
     padding-right: 1.5rem;
     padding-bottom: 4.375rem;
     padding-left: 1.5rem;
+  }
+}
+
+.hero h1 {
+  @include breakpoint-down(medium) {
+  font-size: 1.99rem;
+  margin-bottom: 1.5rem;
+  font-weight: 700;
+  line-height: 1.15;
+  margin-top: 0px;
   }
 }
 
@@ -162,6 +172,16 @@ html {
 .header nav {
   @include breakpoint-up(large) {
     padding-top: 2.1875rem;
+    padding-bottom: 1.5rem;
+  }
+}
+
+.hero h1 {
+  @include breakpoint-up(large) {
+    font-size: 2.1875rem;
+    margin-top: 0px;
+    margin-bottom: 1.3125rem;
+    width: 21ch;
   }
 }
 
