--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -170,10 +170,20 @@ a:hover {
 
 @media (max-width: 63.9375em) {
   .container {
-    padding-top: 4.375rem;
+    padding-top: 0.375rem;
     padding-right: 1.5rem;
     padding-bottom: 4.375rem;
     padding-left: 1.5rem;
+  }
+}
+
+@media (max-width: 63.9375em) {
+  .hero h1 {
+    font-size: 1.99rem;
+    margin-bottom: 1.5rem;
+    font-weight: 700;
+    line-height: 1.15;
+    margin-top: 0px;
   }
 }
 
@@ -193,6 +203,16 @@ a:hover {
 @media (min-width: 64em) {
   .header nav {
     padding-top: 2.1875rem;
+    padding-bottom: 1.5rem;
+  }
+}
+
+@media (min-width: 64em) {
+  .hero h1 {
+    font-size: 2.1875rem;
+    margin-top: 0px;
+    margin-bottom: 1.3125rem;
+    width: 21ch;
   }
 }
 
@@ -310,13 +330,13 @@ a:hover {
   background-repeat: no-repeat;
   background-position: center center;
   min-height: 21.5rem;
+  margin-bottom: 1.5rem;
 }
 @media (min-width: 64em) {
   .hero__image {
     flex: 3;
     order: 2;
-    height: 41.3125rem;
-    min-width: 42.375rem;
+    height: 35.313rem;
   }
 }
 .hero__text {
@@ -327,15 +347,22 @@ a:hover {
     flex: 2;
     order: 1;
     text-align: left;
+    width: 32.8125rem;
   }
 }
-.hero h1 {
-  font-size: 2.8125rem;
-  margin-top: 0px;
-  margin-bottom: 1.5rem;
-  width: 21ch;
+.hero p {
+  line-height: 1.5;
+  margin-bottom: 2.25rem;
+}
+@media (min-width: 64em) {
+  .hero p {
+    margin-bottom: 2.625rem;
+    width: 45ch;
+  }
 }
 .hero .ctabtn {
+  display: flex;
+  align-items: center;
   font-weight: 700;
   gap: 1.9375rem;
 }/*# sourceMappingURL=style.css.map */
