--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -9,7 +9,25 @@ html {
   *::after {
     box-sizing: inherit;
   }
+
+  .bg {
+    background-color: $bgcolor;
+  }
   
+  //Text
+  h1,
+  h2,
+  h3 {
+    line-height: 1.15;
+    color: $hero-text;
+    margin-top: 0px;
+  }
+
+  p {
+    margin-top: 0;
+    margin-bottom: 1.3125rem;
+  }
+
   //Spacing
   .container {
     max-width: 77.5rem;
@@ -139,7 +157,7 @@ html {
   @include breakpoint-down(medium) {
     padding-top: 0.375rem;
     padding-right: 1.5rem;
-    padding-bottom: 4.375rem;
+    padding-bottom: 1.375rem;
     padding-left: 1.5rem;
   }
 }
