--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -49,6 +49,23 @@ html {
   box-sizing: inherit;
 }
 
+.bg {
+  background-color: hsl(216, 29%, 93%);
+}
+
+h1,
+h2,
+h3 {
+  line-height: 1.15;
+  color: hsl(0, 0%, 24%);
+  margin-top: 0px;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 1.3125rem;
+}
+
 .container {
   max-width: 77.5rem;
   margin: 0 auto;
@@ -172,7 +189,7 @@ a:hover {
   .container {
     padding-top: 0.375rem;
     padding-right: 1.5rem;
-    padding-bottom: 4.375rem;
+    padding-bottom: 1.375rem;
     padding-left: 1.5rem;
   }
 }
@@ -337,15 +354,22 @@ a:hover {
 }
 .hero__background {
   background-color: hsl(216, 29%, 93%);
-  margin-bottom: 10rem;
+  margin-bottom: 4rem;
+}
+@media (min-width: 64em) {
+  .hero__background {
+    margin-bottom: 7.75rem;
+    padding-bottom: 2.25rem;
+  }
 }
 .hero__vector {
   position: absolute;
+  width: 14.3125rem;
+  height: 21.1875rem;
   translate: -50% -50%;
-  right: 47.5%;
-  top: 308px;
+  right: 48.5%;
+  top: 299px;
   z-index: 0;
-  height: auto;
 }
 .hero__image {
   background-image: url("/assets/Hero-mobile.png");
@@ -355,10 +379,17 @@ a:hover {
   min-height: 21.5rem;
   margin-bottom: 1.5rem;
 }
+@media (min-width: 40em) {
+  .hero__image {
+    min-height: 41rem;
+    background-position: center 0%;
+  }
+}
 @media (min-width: 64em) {
   .hero__image {
     position: relative;
     max-width: 35.1875rem;
+    background-size: 113%;
     flex: 3;
     order: 2;
     height: 35.313rem;
@@ -378,6 +409,7 @@ a:hover {
 .hero__detainer h3 {
   margin: 0;
   padding-bottom: 0.5rem;
+  color: hsl(0, 0%, 100%);
 }
 .hero__detainer .boxer {
   width: 31.1875rem;
@@ -395,7 +427,7 @@ a:hover {
     order: 1;
     text-align: left;
     width: 32.8125rem;
-    margin-top: 4.5625rem;
+    margin-top: -2.437rem;
   }
 }
 .hero p {
@@ -408,4 +440,43 @@ a:hover {
     width: 45ch;
     font-size: 1rem;
   }
+}
+
+.feature {
+  text-align: center;
+}
+@media (min-width: 40em) {
+  .feature {
+    text-align: left;
+  }
+}
+.feature__box {
+  margin-bottom: 1.375rem;
+}
+@media (min-width: 40em) {
+  .feature__box {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+.feature__intro {
+  margin-bottom: 3.75rem;
+}
+.feature__item {
+  padding-top: 5.625rem;
+  padding-bottom: 6.25rem;
+  padding-left: 1.375rem;
+  padding-right: 1.375rem;
+  border-radius: 0.5rem;
+}
+@media (min-width: 40em) {
+  .feature__item {
+    flex: 0 0 50%;
+  }
+}
+.feature__icon {
+  margin-bottom: 1.875rem;
+}
+.feature__title {
+  margin-bottom: 1rem;
 }/*# sourceMappingURL=style.css.map */
