--- a/app/scss/_feature.scss
+++ b/app/scss/_feature.scss
@@ -3,6 +3,12 @@
 
     @include breakpoint-up(medium){
         text-align: left;
+        margin-bottom: 2.75rem;
+    }
+
+    @include breakpoint-up(large){
+        text-align: center;
+        margin-bottom: 6.25rem;
     }
 
     &__box {
@@ -10,7 +16,8 @@
 
         @include breakpoint-up(medium){
             display: flex;
-            flex-wrap: wrap;     
+            flex-wrap: wrap;
+            gap: 1.375rem;
         }
     }
 
@@ -27,6 +34,7 @@
         
         @include breakpoint-up(medium){
             flex: 0 0 50%;
+            max-width: 22.917rem;
         }
     }
 
@@ -36,5 +44,9 @@
 
     &__title {
         margin-bottom: 1rem;
+    }
+
+    p {
+        margin-bottom: 2.5625rem;
     }
 }
