--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -102,6 +102,18 @@ html {
   a:hover {
     text-decoration: none;
   }
+
+  .mb {
+    margin-bottom: 4rem;
+
+    @include breakpoint-up(large){
+      padding-bottom: 6.25rem;
+    }
+  }
+
+  
+
+
   
   // Flexbox
  .flex{
@@ -274,9 +286,13 @@ ul li:before {
 
 .custom-image {
   height: 8.1875rem;
-  width: 21rem;
-  background-size: cover;
+  width: 19rem;
+  background-size: 100%;
   background-repeat: no-repeat;
   background-position: right;
   border-radius: 0.5rem;
 }
+
+
+
+
