--- a/app/scss/_services.scss
+++ b/app/scss/_services.scss
@@ -1,19 +1,33 @@
 .services {
 
+    margin-bottom: 4rem;
     @include breakpoint-up(large){
         text-align: center;
         margin-bottom: 6.25rem;
-        padding-top: 3.625rem;
         padding-bottom: 6.25rem;
+    }
+
+    h3 {
+        margin-bottom: 0.4375rem;
+        font-size: 1.125rem;
+    }
+
+    p {
+        font-size: 1rem;
+    }
+
+    &__intro {
+        margin-bottom: 1.75rem;
     }
 
     &__box {
         display: grid;
         grid-template-columns: 1fr;
         gap: 2.875rem;
-
+        
         @include breakpoint-up(large) {
             display: flex;
+            gap: 1.5rem;
         }
     }
 
@@ -23,7 +37,7 @@
         width: auto;
         background-size: cover;
         background-repeat: no-repeat;
-        background-position: right;
+        background-position: left;
         background-image: url('/assets/Services.png');
         border-radius: 0.5rem;
 
@@ -38,24 +52,63 @@
         }
     }
 
+    &__flex {
+
+        display: grid;
+        text-align: center;
+        justify-items: center;
+
+        @include breakpoint-up(medium){
+            text-align: left;
+        }
+
+        @include breakpoint-up(medium){
+            display: flex;
+        }
+    }
+
+    &__gap {
+        gap: 1.25rem;
+    }
+
+    &__th {
+        height: 5.625rem;
+
+        @include breakpoint-down(small){
+            max-width: 20rem;
+        }
+    }
+
     &__image1 {
         background-image: url('/assets/image1.png');
+        background-position: top;
     }
     
     &__image2 {
         background-image: url('/assets/image2.png');
+        background-position: top;
     }
     
     &__image3 {
         background-image: url('/assets/image3.png');
+        background-position: top;
     }
 
     &__text{
         text-align: left;
         flex: 1;
         order: 1;
+
+        @include breakpoint-up(medium){
+            height: 28rem;
+        }
+         
+        @include breakpoint-up(large){
+            gap: 3.1rem;
+        }
     }
 }
+
 
 
 
