--- a/app/scss/_clients.scss
+++ b/app/scss/_clients.scss
@@ -9,11 +9,12 @@
         }
     }
     &__intro {
-        margin-bottom: 1.75rem;
+        margin-bottom: 3.75rem;
 
         @include breakpoint-up(medium){
             max-width: 28rem;
             margin: auto;
+            margin-bottom: 2.3125rem;
         }
     }
 
@@ -22,12 +23,18 @@
         @include breakpoint-up(medium){
             display: grid;
             text-align: center;
-            max-width: 66%;
             margin: auto;
+        }
+
+        @include breakpoint-up(large){
+            max-width: 66%;
         }
     }
 
     &__stories {
+        display: grid;
+        gap: 8rem;
+
         @include breakpoint-up(medium){
             display: flex;
             gap: 2.0625rem;
@@ -35,7 +42,8 @@
         
     }
 
-    &__icon {
+    &__con {
+        position: relative;
         display: grid;
         justify-items: center;
         padding-top: 3.375rem;
@@ -46,11 +54,20 @@
         background-color: $bgcolor;
 
         &::after {
-            display: block;
-            width: 0;
             content: "";
-            border-bottom: 0;
+            position: absolute;
+            border-left: 60px solid transparent;
+            border-right: 60px solid transparent;
+            border-top: 100px solid transparent;
+            bottom: -75px;
+            border-top-color: $bgcolor;
+            left: calc(50% - 60px);
         }
+    }
+
+    &__comments{
+        position: absolute;
+        top: -4.6rem;
     }
 
     &__image1 {
