--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -107,7 +107,7 @@ html {
     margin-bottom: 4rem;
 
     @include breakpoint-up(large){
-      padding-bottom: 6.25rem;
+      margin-bottom: 6.25rem;
     }
   }
   
