--- a/app/scss/_feature.scss
+++ b/app/scss/_feature.scss
@@ -41,7 +41,7 @@
         
         @include breakpoint-up(medium){
             flex: 0 0 50%;
-            max-width: 20.917rem;
+            max-width: 32%;
         }
 
         @include breakpoint-up(large){
